# GyattSpeed

./: Cargo.toml
src/: init.rs  lib.rs  main.rs  text-document.rs  utils.rs
src/gl_renderer/: render_gl.rs
src/gl_renderer/shaders/: text.fs  text.vs
